--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -64,3 +64,277 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
+
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* Set every element's box-sizing to border-box */
+* {
+	box-sizing: border-box;
+	
+}
+
+html, body {
+    height: 100%;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+}
+
+/* Your code starts here! */
+
+
+nav{
+	display: flex;
+	height: 70px;
+	justify-content: space-around;
+	align-items: center;
+}
+
+nav a {
+	font-size: 15px;
+	padding: 5px 10px;
+}
+
+
+
+
+header {
+	display: flex;
+	height: 500px;
+	width: 100%;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
+}
+
+.left-header h1{
+		font-size: 60px;
+}
+
+.left-header span {
+	border: 2px solid black;
+	padding: 3px 25px;
+}
+
+.left-header {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	width: 50%;
+	height: 500px; 
+}
+
+.right-header{
+	display: flex;
+	height: 500px;
+	width: 50%;
+	justify-content: center;
+	align-items: center;
+}
+
+.right-header img{
+	height:65%;
+	width: 65%;
+}
+
+.top-features {
+	display: flex;
+
+}
+
+.features {
+	width: 50%;
+	padding: 25px 10px;	 
+}
+
+.about {
+	width: 50%;
+	padding: 25px 10px;
+}
+.middle-img {
+	width: 100%;
+}
+
+
+.bottom-features{
+	display: flex;
+	justify-content: space-around;
+}
+.services {
+	width: 33%;
+	padding: 25px 10px;	 
+}
+
+.products {
+		width: 33%;
+		padding: 25px 10px; 
+	}
+		
+.vision {
+			width: 33%;
+			padding: 25px 10px;			 
+	}
+
+	
+	footer {
+		border-top: 2px solid black;
+	}
+
+	footer contact h3{
+		padding-top: 20px;
+	}
+	footer span {
+		line-height: 3;
+	}
+
+
+
+	footer p {
+		margin-top: 20px;
+		text-align: center;
+	}
+
+.services-header {
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+		border-bottom: 1px solid black;
+		height: auto;
+		width: 93%;	
+		position: relative;
+		margin: 0 auto;
+		margin-bottom: 45px;
+		 
+	}
+ .services-header-img {
+		width: 100%;
+		margin-bottom: 20px;
+	}
+
+	.services-header h1{
+		margin-top: 20px;
+		margin-bottom: 30px;
+		font-size: 35px;
+	}
+
+	.services-header p{
+		margin-bottom: 30px;
+		
+	}
+
+	.services-offered{
+		width: 93%;
+		height: auto;
+		display: flex;
+		justify-content: space-between;
+		flex-direction: row;
+		flex-wrap: wrap;
+		margin: 0 auto;
+	}
+
+	.services-offered div{
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-start;
+		width: 48.5%;
+		border: 1px solid black;
+		padding: 15px 25px 15px 15px;
+		margin-bottom: 40px;
+	}
+	
+	.services-offered span{
+		text-align: center;
+		width: 120px;
+		border-radius: 6%;
+		padding: 4px 10px;
+		border: 1px solid black;
+		margin-top: 10px;
+	}
+	
+
+	.services-bottom {
+		padding-top: 30px;
+		display: flex;
+		margin: 0 auto;
+		justify-content: space-between;
+		width: 93%;
+		border-top: 3px solid black;
+	}
+
+	.bottom-left {
+		width: 47%;
+	}
+
+	.bottom-left h3 {
+		line-height: 2;
+	}
+
+	.bottom-left ul {
+		margin-top:20px ;
+		line-height: 2;
+		list-style-type: square;
+		padding-left: 20px;
+	
+	}
+
+	.services-info-img{
+ 		width: 48%
+	}
+
+.copyright { 
+	text-align: center;
+	margin-top: 30px;
+}
